# ProyectoCompiladoresGolang

./: CMakeLists.txt  Enviroment.h  GenCode.cpp  GenCode.h  README.md  Semantic_types.cpp  Semantic_types.h  TypeCheker.cpp  TypeCheker.h  ast.cpp  ast.h  documentacion_proyecto.txt  grammar.txt  main.cpp  parser.cpp  parser.h  resultados.py  run_all_inputs.py  scanner.cpp  scanner.h  token.cpp  token.h  visitor.cpp  visitor.h
bench/: benchmark.go  benchmark_runtime.go
inputs/: input1.txt  input10.txt  input10_tokens.txt  input1_tokens.txt  input2.txt  input2_tokens.txt  input3.txt  input3_tokens.txt  input4.txt  input4_tokens.txt  input5.txt  input5_tokens.txt  input6.txt  input6_tokens.txt  input7.txt  input8.txt  input9.txt
outputs/: output1.txt  output3.txt  output6.txt  output_1.s  output_10.s  output_2.s  output_2.txt  output_3.s  output_4.s  output_5.s  output_6.s  output_7.s  output_8.s  output_9.s  tokens_1.txt  tokens_2.txt  tokens_3.txt  tokens_4.txt  tokens_5.txt  tokens_6.txt  tokens_7.txt  tokens_8.txt  tokens_9.txt
